--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Jeri Johnston Photography</title>
     </head>
     <body>
+        <header>
         <h1>Johnston Photography</h1>
         <ul id="navigation" class="hide">
             <li><a href="index.html">Home</a></li>
@@ -15,5 +16,22 @@
                 <a href="index.html">Meet Jeri</a>
             </li>
         </ul>
+    </header>
+    <main>
+        <h3>Family</h3>
+        <h3>Wedding</h3>
+        <h3>Baby</h3>
+        <h3>Senior Photos</h3>
+    </main>
+    <footer>
+        <span class="contactInfo">
+            jjalsj@gmail.com 208-528-2969
+        </span>
+        <div class=="social"></div>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="facebook link"> </a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="Instagram"> </a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="Pinterest"></a>
+
+    </footer>
     </body>
 </html>
