--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Jeri Johnston Photography</title>
+        <title> Johnston Photography</title>
+        <link rel="stylesheet" href="large.css">
     </head>
     <body>
         <header>
@@ -13,24 +14,25 @@
                 <a href="">Contact</a>
             </li>
             <li>
-                <a href="index.html">Meet Jeri</a>
+                <a href="meetjeri.html">Meet Jeri</a>
             </li>
         </ul>
     </header>
     <main>
-        <h3>Family</h3>
-        <h3>Wedding</h3>
-        <h3>Baby</h3>
-        <h3>Senior Photos</h3>
+        <img id ="family"src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo"><h3>Family</h3>
+        <img id= "engagement" src="https://drive.google.com/uc?id=1-Bju06awPsl-4qfEyqDFlpFFOAxf3Xts" alt ="Engagement Photo"><h3>Enagement</h3>
+        <img id="wedding" src = "https://drive.google.com/uc?id=16DYKPgcNfwEjnOAKWT8H1ZoTyLQMHT7d" alt = "Wedding Photo"><h3>Wedding</h3>
+        <img id="baby" src = "https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt = "Baby Photo"><h3>Baby</h3>
+        <img id="graduating" src = "https://drive.google.com/uc?id=1futd6RrmxE1yACJpdAf0Q9YWVelEw1hQ" alt = "Graduation Photo"><h3>Graduating</h3>
     </main>
     <footer>
         <span class="contactInfo">
             jjalsj@gmail.com 208-528-2969
         </span>
-        <div class=="social"></div>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="facebook link"> </a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="Instagram"> </a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="https://via.placeholder.com/40" alt="Pinterest"></a>
+        <div class="social"></div>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
+        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
 
     </footer>
     </body>
