--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="">Pricing</a></li>
             <li>
-                <a href="contact.html">Contact</a>
+                <a href="">Contact</a>
             </li>
             <li>
                 <a href="meetjeri.html">Meet Jeri</a>
@@ -19,11 +19,6 @@
         </ul>
     </header>
     <main>
-        <img id ="family"src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo"><h3>Family</h3>
-        <img id= "engagement" src="https://drive.google.com/uc?id=1-Bju06awPsl-4qfEyqDFlpFFOAxf3Xts" alt ="Engagement Photo"><h3>Enagement</h3>
-        <img id="wedding" src = "https://drive.google.com/uc?id=16DYKPgcNfwEjnOAKWT8H1ZoTyLQMHT7d" alt = "Wedding Photo"><h3>Wedding</h3>
-        <img id="baby" src = "https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt = "Baby Photo"><h3>Baby</h3>
-        <img id="graduating" src = "https://drive.google.com/uc?id=1futd6RrmxE1yACJpdAf0Q9YWVelEw1hQ" alt = "Graduation Photo"><h3>Graduating</h3>
     </main>
     <footer>
         <span class="contactInfo">
