--- a/meetjeri.html
+++ b/meetjeri.html
@@ -9,13 +9,9 @@
         <h1>Johnston Photography</h1>
         <ul id="navigation" class="hide">
             <li><a href="index.html">Home</a></li>
-            <li><a href="">Pricing</a></li>
-            <li>
-                <a href="">Contact</a>
-            </li>
-            <li>
-                <a href="index.html">Meet Jeri</a>
-            </li>
+            <li><a href="pricing.html">Pricing</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="meetjeri.html">Meet Jeri</a></li>
         </ul>
     </header>
     <main>
