--- a/siteplan.html
+++ b/siteplan.html
@@ -3,6 +3,11 @@
     <head>
         <title> Johnston Photography</title>
         <link rel="stylesheet" href="large.css">
+        <link rel="stylesheet" href="siteplan.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -15,11 +20,7 @@
         </ul>
     </header>
     <main>
-        <img id ="family"src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo"><h3>Family</h3>
-        <img id= "engagement" src="https://drive.google.com/uc?id=1-Bju06awPsl-4qfEyqDFlpFFOAxf3Xts" alt ="Engagement Photo"><h3>Enagement</h3>
-        <img id="wedding" src = "https://drive.google.com/uc?id=16DYKPgcNfwEjnOAKWT8H1ZoTyLQMHT7d" alt = "Wedding Photo"><h3>Wedding</h3>
-        <img id="baby" src = "https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt = "Baby Photo"><h3>Baby</h3>
-        <img id="graduating" src = "https://drive.google.com/uc?id=1futd6RrmxE1yACJpdAf0Q9YWVelEw1hQ" alt = "Graduation Photo"><h3>Graduating</h3>
+       
     </main>
     <footer>
         <span class="contactInfo">
