--- a/siteplan.html
+++ b/siteplan.html
@@ -1,36 +1,52 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Johnston Photography</title>
-        <link rel="stylesheet" href="large.css">
-        <link rel="stylesheet" href="siteplan.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
+
+<head>
+    <title> Johnston Photography</title>
+    <!--<link rel="stylesheet" href="large.css">-->
+    <link rel="stylesheet" href="siteplan.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <h1>Johnston Photography</h1>
-        <ul id="navigation" class="hide">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="meetjeri.html">Meet Jeri</a></li>
-        </ul>
+        <!--  <button onclick="toggleMenu()">&#9776;</button> -->
+        <nav>
+            <ul id="nav" class="hide">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="meetjeri.html">Meet Jeri</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-       
+        <p>Font for Header: <span id="fonttype">Marck Script</span></p>
+        <p>Font for Body: Roboto Mono </p>
+        <p >Color Scheme</p>
+        <div class="color">
+        <p class="griditem" id="blue">Navy Blue: #040451</p>
+        <p class="griditem" id="grey">Grey: #B8B8B7</p>
+        <p class="griditem" id="white">White: #FFFFFF</p>
+    </div>
     </main>
     <footer>
         <span class="contactInfo">
             jjalsj@gmail.com 208-528-2969
         </span>
         <div class="social"></div>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
-        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png"
+                alt="facebook link"></a>
+        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png"
+                alt="Instagram"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png"
+                alt="Pinterest"></a>
 
     </footer>
-    </body>
+</body>
+
 </html>
