--- a/pricing.html
+++ b/pricing.html
@@ -3,25 +3,33 @@
     <head>
         <title> Johnston Photography</title>
         <link rel="stylesheet" href="large.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-        <h1>Johnston Photography</h1>
-        <ul id="navigation" class="hide">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="meetjeri.html">Meet Jeri</a></li>
-        </ul>
-    </header>
+            <h1>Johnston Photography</h1>
+            <!--  <button onclick="toggleMenu()">&#9776;</button> -->
+            <nav>
+                <ul id="nav" class="hide">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="meetjeri.html">Meet Jeri</a></li>
+                </ul>
+            </nav>
+        </header>
     <main>
         <h2>Prices</h2>
-        https://drive.google.com/file/d/1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663/view?usp=sharing
-        <img id ="cuteBaby" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Gasping Baby">
-        <p>Package 1</p>
-        <p>Package 2</p>
-        <p>Package 3</p>
-        <p>Package 4</p>
+        <div class="pricing">
+        <img class="gridprice1" id ="cuteBaby" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Gasping Baby">
+        <p class="gridprice">Package 1</p>
+        <p class="gridprice">Package 2</p>
+        <p class="gridprice">Package 3</p>
+        <p class="gridprice">Package 4</p>
+        </div>
     </main>
     <footer>
         <span class="contactInfo">
