--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Contact Johnston Photography</title>
-        <link rel="stylesheet" href="large.css">
-    </head>
-    <body>
-        <header>
+
+<head>
+    <title> Contact Johnston Photography</title>
+    <link rel="stylesheet" href="large.css">
+    <link href="contact-form.css" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <h1>Johnston Photography</h1>
         <ul id="navigation" class="hide">
             <li><a href="index.html">Home</a></li>
@@ -15,54 +18,38 @@
         </ul>
     </header>
     <main>
-        <link href="contact-form.css" rel="stylesheet">
-
-<div class="fcf-body">
-
-    <div id="fcf-form">
-    <h3 class="fcf-h3">Contact us</h3>
-
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
         
-        <div class="fcf-form-group">
-            <label for="Name" class="fcf-label">Your name</label>
-            <div class="fcf-input-group">
-                <input type="text" id="Name" name="Name" class="fcf-form-control" required>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <label for="Email" class="fcf-label">Your email address</label>
-            <div class="fcf-input-group">
-                <input type="email" id="Email" name="Email" class="fcf-form-control" required>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <label for="Message" class="fcf-label">Your message</label>
-            <div class="fcf-input-group">
-                <textarea id="Message" name="Message" class="fcf-form-control" rows="6" maxlength="3000" required></textarea>
-            </div>
-        </div>
-
-        <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send Message</button>
-        </div>
-
+<div class="container">
+    <form action="https://formspree.io/tksgameplayer@gmail.com">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+  
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+  
+      <label for="lname">Last Name</label>
+      <input type="email" id="email" name="emailaddress" placeholder="janedoe@gmail.com">
+  
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+  
+      <input type="submit" value="Submit">
     </form>
-    </div>
-
-</div>
+  </div>
     </main>
     <footer>
         <span class="contactInfo">
             jjalsj@gmail.com 208-528-2969
         </span>
         <div class="social"></div>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
-        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png"
+                alt="facebook link"></a>
+        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png"
+                alt="Instagram"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png"
+                alt="Pinterest"></a>
 
     </footer>
-    </body>
+</body>
+
 </html>
