--- a/meetjeri.html
+++ b/meetjeri.html
@@ -15,12 +15,13 @@
         </ul>
     </header>
     <main>
-        <p>Meet Jeri -- It's not only writers who can benefit from this free online tool. If you're a programmer who's working on a project where blocks of text are needed, this tool can be a great way to get that. It's a good way to test your programming and that the tool being created is working well.
-
-            Above are a few examples of how the random paragraph generator can be beneficial. The best way to see if this random paragraph picker will be useful for your intended purposes is to give it a try. Generate a number of paragraphs to see if they are beneficial to your current project.
-            
-            If you do find this paragraph tool useful, please do us a favor and let us know how you're using it. It's greatly beneficial for us to know the different ways this tool is being used so we can improve it with updates. This is especially true since there are times when the generators we create get used in completely unanticipated ways from when we initially created them. If you have the time, please send us a quick note on what you'd like to see changed or added to make it better in the future.</p>
+        <div class="meetJeri">
+        <p class="gridJeri">Meet Jeri Johnston - She and her husband, John, have 3 beautiful children. Jeri is a gradute of Utah State University (Aggies all the way!), and has lived in Idaho with her family
+            for 25 years. She spent her growing up years in Montana with her 2 brothers, beautiful sister, and a multitude of cousins. She loves scrapbooking, reading a good book, hanging out with her family, and taking beautiful photos! 
+            She believes that photography is about preserving memories, and helps others do it without breaking the bank. 
+        </p class="gridJeri">
             <img id ="family"src="https://drive.google.com/uc?id=1-Hs3RsOtejUEpt6lh8D55FuoLsUE660h" alt="Family Photo">
+        </div>
     </main>
     <footer>
         <span class="contactInfo">
