--- a/babies.html
+++ b/babies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Johnston Photography Pricing</title>
+        <title> Johnston Photography</title>
         <link rel="stylesheet" href="large.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,16 +22,21 @@
             </nav>
         </header>
     <main>
-        <h2>Prices</h2>
-        <div class="pricing">
-        <img class="gridprice1" id ="cuteBaby" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Gasping Baby">
-        <p class="gridprice">Babies/Children: $75</p>
-        <p class="gridprice">Families: Start at $75*<br>*Dependant on Members in Family</br></p>
-        <p class="gridprice">Seniors: $125</p>
-        <p class="gridprice">Engagements and Weddings: Call for Consultation</p>
-        
-        </div>
-        <p>All packages include the copyrights</p> 
+        <div class="babiescontainer">
+            <!--https://drive.google.com/file/d/1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Example image">
+            <!--https://drive.google.com/file/d/13vHDeb2qj9o8xWK9uWJJlqymmS6ASFVl/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=13vHDeb2qj9o8xWK9uWJJlqymmS6ASFVl"" alt="Example image">
+            <!--https://drive.google.com/file/d/1jddiVTmKez3N7Kwsl31t2CHVsPNYx9KU/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=1jddiVTmKez3N7Kwsl31t2CHVsPNYx9KU"" alt="Example image">
+            <!---->
+            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image"> 
+            <!---->
+            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image">
+            <!---->
+            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image"> 
+            <!---->    
+         </div>
     </main>
     <footer>
         <span class="contactInfo">
