--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <title> Contact Johnston Photography</title>
     <link rel="stylesheet" href="large.css">
     <link href="contact-form.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +35,7 @@
       <input type="email" id="email" name="emailaddress" placeholder="janedoe@gmail.com">
   
       <label for="subject">Subject</label>
-      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+      <textarea id="subject" name="subject" placeholder="Question or Comment..."" style="height:200px"></textarea>
   
       <input type="submit" value="Submit">
     </form>
@@ -46,7 +50,7 @@
                 alt="facebook link"></a>
         <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png"
                 alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png"
+        <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png"
                 alt="Pinterest"></a>
 
     </footer>
