--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             </nav>
         </header>
     <main>
+    
         <div class="categories">
+            <!-- to change photos, get the sharing ID and put it in the space https://drive.google.com/uc?id=RIGHTHEREFORTHESHARINGID-->
         <img class = "griditem" id ="family"src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo">
         <h3 class = "griditem">Family</h3>
         <h3 class = "griditem">Enagement</h3>
@@ -42,7 +44,7 @@
         <div class="social"></div>
         <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
         <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
+        <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
 
     </footer>
     </body>
