--- a/meetjeri.html
+++ b/meetjeri.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Johnston Photography</title>
+        <title>Meet Jeri Johnston </title>
         <link rel="stylesheet" href="large.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -30,7 +34,7 @@
         <div class="social"></div>
         <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
         <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
+        <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
 
     </footer>
     </body>
