--- a/siteplan.html
+++ b/siteplan.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Johnston Photography</title>
+    <title>Site Plan for Johnston Photography</title>
     <!--<link rel="stylesheet" href="large.css">-->
     <link rel="stylesheet" href="siteplan.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@
                 alt="facebook link"></a>
         <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png"
                 alt="Instagram"></a>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\pinteresticon.png"
+        <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png"
                 alt="Pinterest"></a>
 
     </footer>
