--- a/babies.html
+++ b/babies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Johnston Photography</title>
+        <title> Johnston Photography - Babies</title>
         <link rel="stylesheet" href="large.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,16 +26,31 @@
             <!--https://drive.google.com/file/d/1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663/view?usp=sharing-->
             <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Example image">
             <!--https://drive.google.com/file/d/13vHDeb2qj9o8xWK9uWJJlqymmS6ASFVl/view?usp=sharing-->
-            <img class="item" src="https://drive.google.com/uc?id=13vHDeb2qj9o8xWK9uWJJlqymmS6ASFVl"" alt="Example image">
+            <img class="item" src="https://drive.google.com/uc?id=13vHDeb2qj9o8xWK9uWJJlqymmS6ASFVl" alt="Example image">
             <!--https://drive.google.com/file/d/1jddiVTmKez3N7Kwsl31t2CHVsPNYx9KU/view?usp=sharing-->
-            <img class="item" src="https://drive.google.com/uc?id=1jddiVTmKez3N7Kwsl31t2CHVsPNYx9KU"" alt="Example image">
-            <!---->
-            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image"> 
-            <!---->
-            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image">
-            <!---->
-            <img class="item" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663"" alt="Example image"> 
-            <!---->    
+            <img class="item" src="https://drive.google.com/uc?id=1jddiVTmKez3N7Kwsl31t2CHVsPNYx9KU" alt="Example image">
+            <!--https://drive.google.com/file/d/19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1reXPEG31c5eEhjS1Y65jRLWIof51WSwf/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=1reXPEG31c5eEhjS1Y65jRLWIof51WSwf" alt="Example image">
+            <!--https://drive.google.com/file/d/1LHDk9Nw23NUSZXfV8f254eSO9FhayF99/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=1LHDk9Nw23NUSZXfV8f254eSO9FhayF99" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1xycfuZqjaz6YTpr9Co11BZAlTCJet3em/view?usp=sharing-->  
+            <img class="item" src="https://drive.google.com/uc?id=1xycfuZqjaz6YTpr9Co11BZAlTCJet3em" alt="Example image">  
+            <!--https://drive.google.com/file/d/1qtJjExHI8sNUQ7E9B_VTe8QELhnCest6/view?usp=sharing--> 
+            <img class="item" src="https://drive.google.com/uc?id=1qtJjExHI8sNUQ7E9B_VTe8QELhnCest6" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1LuC1rwNE_YuNzlG-lpOgz-Ze6wmk77p-/view?usp=sharing--> 
+            <img class="item" src="https://drive.google.com/uc?id=1LuC1rwNE_YuNzlG-lpOgz-Ze6wmk77p-" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1uXbzNQqq2ciA7xBHQqT9u2wU9ael2FMc/view?usp=sharing--> 
+            <img class="item" src="https://drive.google.com/uc?id=1uXbzNQqq2ciA7xBHQqT9u2wU9ael2FMc" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1bGg0pFYASTf-zKWr4GWGCpQkYIUmUZiA/view?usp=sharing--> 
+            <img class="item" src="https://drive.google.com/uc?id=1bGg0pFYASTf-zKWr4GWGCpQkYIUmUZiA" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1X0WcYguynCgIvGOCcI-ZD6gULuLEjrVz/view?usp=sharing--> 
+            <img class="item" src="https://drive.google.com/uc?id=1X0WcYguynCgIvGOCcI-ZD6gULuLEjrVz" alt="Example image"> 
+            <!--https://drive.google.com/file/d/1VzTjSet46sju9CnN-0fpyfwQHpxoGrkL/view?usp=sharing
+            https://drive.google.com/file/d/1T0nmpWHO02Jk1flY0rGqwYXBsCEM8LL9/view?usp=sharing-->
+            <img class="item" src="https://drive.google.com/uc?id=1T0nmpWHO02Jk1flY0rGqwYXBsCEM8LL9" alt="Example image"> 
+
          </div>
     </main>
     <footer>
