--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> Johnston Photography</title>
-        <link rel="stylesheet" href="large.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header>
-            <h1>Johnston Photography</h1>
-            <!--  <button onclick="toggleMenu()">&#9776;</button> -->
-            <nav>
-                <ul id="nav" class="hide">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="meetjeri.html">Meet Jeri</a></li>
-                </ul>
-            </nav>
-        </header>
+
+<head>
+    <title> Johnston Photography</title>
+    <link rel="stylesheet" href="large.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Roboto+Mono&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <h1>Johnston Photography</h1>
+        <!--  <button onclick="toggleMenu()">&#9776;</button> -->
+        <nav>
+            <ul id="nav" class="hide">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="meetjeri.html">Meet Jeri</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
-    
+
         <div class="categories">
             <!-- to change photos, get the sharing ID and put it in the space https://drive.google.com/uc?id=RIGHTHEREFORTHESHARINGID-->
-        <img class = "griditem" id ="family"src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo">
-        <h3 class = "griditem">Family</h3>
-        <h3 class = "griditem">Enagement</h3>
-        <img class = "griditem" id= "engagement" src="https://drive.google.com/uc?id=1-Bju06awPsl-4qfEyqDFlpFFOAxf3Xts" alt ="Engagement Photo">
-        <img class = "griditem" id="wedding" src = "https://drive.google.com/uc?id=16DYKPgcNfwEjnOAKWT8H1ZoTyLQMHT7d" alt = "Wedding Photo">
-        <h3 class = "griditem">Wedding</h3>
-        <h3 class = "griditem">Baby</h3>
-        <img class = "griditem" id="baby" src = "https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt = "Baby Photo">
-        <img class = "griditem" id="graduating" src = "https://drive.google.com/uc?id=1futd6RrmxE1yACJpdAf0Q9YWVelEw1hQ" alt = "Graduation Photo">
-        <h3 class = "griditem">Graduation</h3>
-    </div>
+            <a href="family.html"><img class="griditem" id="family" class="zoom" src="https://drive.google.com/uc?id=1onwiE-MYllfghuQ3r2GirW2MUhf5ep1G" alt="Family Photo"></a>
+            <a href="family.html"><h3 class="griditem">Family</h3> </a>
+            <a href="engagement.html"><h3 class="griditem">Enagement</h3></a>
+            <a href="engagement.html"><img class="griditem" id="engagement"src="https://drive.google.com/uc?id=1-Bju06awPsl-4qfEyqDFlpFFOAxf3Xts" alt="Engagement Photo"></a>
+            <a href="wedding.html"><img class="griditem" id="wedding"src="https://drive.google.com/uc?id=16DYKPgcNfwEjnOAKWT8H1ZoTyLQMHT7d" alt="Wedding Photo"></a>
+            <a href="wedding.html"><h3 class="griditem">Wedding</h3></a>
+            <a href="babies.html"><h3 class="griditem">Baby</h3></a>
+            <a href="babies.html"> <img class="griditem" id="baby" src="https://drive.google.com/uc?id=19ZNiNtorcdxHBzqdXfrvhfkUDoew-JnS" alt="Baby Photo"></a>
+            <a href="graduation.html"><img class="griditem" id="graduating" src="https://drive.google.com/uc?id=1futd6RrmxE1yACJpdAf0Q9YWVelEw1hQ" alt="Graduation Photo"></a>
+            <a href="graduation.html"><h3 class="griditem">Graduation</h3></a>
+        </div>
     </main>
     <footer>
         <span class="contactInfo">
             jjalsj@gmail.com 208-528-2969
         </span>
         <div class="social"></div>
-        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png" alt="facebook link"></a>
-        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png" alt="Instagram"></a>
+        <a href="https://www.facebook.com/hashtag/jerijohnstonphotography"> <img src="images\facebookicon.png"
+                alt="facebook link"></a>
+        <a href="https://www.instagram.com/jeri.johnston/?hl=en"> <img src="images\instagramicon.png"
+                alt="Instagram"></a>
         <a href="https://pin.it/6AYN9Uc"> <img src="images\pinteresticon.png" alt="Pinterest"></a>
 
     </footer>
-    </body>
+</body>
+
 </html>
