--- a/meetjeri.html
+++ b/meetjeri.html
@@ -20,11 +20,11 @@
     </header>
     <main>
         <div class="meetJeri">
-        <p class="gridJeri">Meet Jeri Johnston - She and her husband, John, have 3 beautiful children. Jeri is a gradute of Utah State University (Aggies all the way!), and has lived in Idaho with her family
+        <p class="gridJeri" id="meetJeriparagraph">Meet Jeri Johnston - She and her husband, John, have 3 beautiful children. Jeri is a gradute of Utah State University (Aggies all the way!), and has lived in Idaho with her family
             for 25 years. She spent her growing up years in Montana with her 2 brothers, beautiful sister, and a multitude of cousins. She loves scrapbooking, reading a good book, hanging out with her family, and taking beautiful photos! 
             She believes that photography is about preserving memories, and helps others do it without breaking the bank. 
         </p class="gridJeri">
-            <img id ="family"src="https://drive.google.com/uc?id=1-Hs3RsOtejUEpt6lh8D55FuoLsUE660h" alt="Family Photo">
+            <img id ="johnstonfamily"src="https://drive.google.com/uc?id=1-Hs3RsOtejUEpt6lh8D55FuoLsUE660h" alt="Family Photo">
         </div>
     </main>
     <footer>
