--- a/pricing.html
+++ b/pricing.html
@@ -22,7 +22,6 @@
             </nav>
         </header>
     <main>
-        <h2>Prices</h2>
         <div class="pricing">
         <img class="gridprice1" id ="cuteBaby" src="https://drive.google.com/uc?id=1Ikgz9XcmRCnX7Elk1jbtmr7HTINIi663" alt="Gasping Baby">
         <p class="gridprice">Babies/Children: $75</p>
@@ -31,7 +30,8 @@
         <p class="gridprice">Engagements and Weddings: Call for Consultation</p>
         
         </div>
-        <p>All packages include the copyrights</p> 
+        <br>
+        <p>~All packages include the copyrights~</p> 
     </main>
     <footer>
         <span class="contactInfo">
